--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -39,7 +39,17 @@ const socials: ISocial[] = [
   </header>
 
   <!-- Name -->
-  <h1 class:list={["text-4xl", "font-medium", "tracking-tight", "capitalize", "text-gray-800", "dark:text-gray-300"]}>
+  <h1
+    class:list={[
+      "text-4xl",
+      "sm:text-5xl",
+      "font-medium",
+      "tracking-tight",
+      "capitalize",
+      "text-gray-800",
+      "dark:text-gray-300",
+    ]}
+  >
     jianqiang du
   </h1>
 
@@ -47,6 +57,7 @@ const socials: ISocial[] = [
   <div
     class:list={[
       "text-lg",
+      "sm:text-xl",
       "font-medium",
       "tracking-tight",
       "capitalize",
