--- a/src/pages/index/WorkDetails.astro
+++ b/src/pages/index/WorkDetails.astro
@@ -8,52 +8,60 @@ interface Props extends IWork {}
 const { jobTitle, company, companyHomepage, description, projects, technologiesUsed, startYear, endYear } = Astro.props
 ---
 
-<!-- Employed Years -->
-<YearRange class:list={["text-xs", "tracking-wide", "uppercase", "py-2"]} startYear={startYear} endYear={endYear} />
+<div class:list={["grid", "gap-1", "sm:grid-cols-8", "sm:gap-8"]}>
+  <!-- Employed Years -->
+  <YearRange
+    class:list={["text-xs", "tracking-wide", "uppercase", "sm:leading-loose", "sm:col-span-2"]}
+    startYear={startYear}
+    endYear={endYear}
+  />
 
-<!-- Job Title & Company -->
-<AppLink
-  class:list={["block", "font-medium", "text-gray-800", "dark:text-gray-300"]}
-  url={companyHomepage}
-  showSuffixIcon
->
-  {jobTitle} · {company}
-</AppLink>
+  <div class:list={["sm:col-span-6"]}>
+    <!-- Job Title & Company -->
+    <AppLink
+      class:list={["block", "font-medium", "text-gray-800", "dark:text-gray-300"]}
+      url={companyHomepage}
+      showSuffixIcon
+    >
+      {jobTitle} · {company}
+    </AppLink>
 
-<!-- Description -->
-<p class:list={["text-sm", "leading-relaxed", "mt-2"]}>{description}</p>
+    <!-- Description -->
+    <p class:list={["text-sm", "leading-relaxed", "mt-2"]}>{description}</p>
 
-<!-- Products -->
-{
-  !!projects && projects.length > 0 && (
-    <ul class:list={["flex", "flex-wrap", "gap-x-4", "gap-y-2", "mt-4"]}>
-      {projects.map((it) => (
-        <li
-          class:list={[
-            "font-medium",
-            "text-sm",
-            "text-nowrap",
-            "leading-normal",
-            "text-gray-700",
-            "dark:text-gray-400",
-          ]}
-        >
-          <AppLink url={it.url} showPrefixIcon>
-            {it.name}
-          </AppLink>
-        </li>
-      ))}
+    <!-- Products -->
+    {
+      !!projects && projects.length > 0 && (
+        <ul class:list={["flex", "flex-wrap", "gap-x-4", "gap-y-2", "mt-4"]}>
+          {projects.map((it) => (
+            <li
+              class:list={[
+                "font-medium",
+                "text-sm",
+                "text-nowrap",
+                "leading-normal",
+                "text-gray-700",
+                "dark:text-gray-400",
+              ]}
+            >
+              <AppLink url={it.url} showPrefixIcon>
+                {it.name}
+              </AppLink>
+            </li>
+          ))}
+        </ul>
+      )
+    }
+
+    <!-- Technologies Used -->
+    <ul class:list={["flex", "flex-wrap", "gap-x-1.5", "gap-y-2", "mt-4"]}>
+      {
+        technologiesUsed.map((it) => (
+          <li>
+            <Tag text={it} />
+          </li>
+        ))
+      }
     </ul>
-  )
-}
-
-<!-- Technologies Used -->
-<ul class:list={["flex", "flex-wrap", "gap-x-1.5", "gap-y-2", "mt-4"]}>
-  {
-    technologiesUsed.map((it) => (
-      <li>
-        <Tag text={it} />
-      </li>
-    ))
-  }
-</ul>
+  </div>
+</div>
