--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -18,7 +18,8 @@ try {
 
 <BaseLayout>
   <div class="py-5">
-    <div class:list={["flex", "items-center", "justify-between", "mb-2"]}>
+    <!-- Nav -->
+    <nav class:list={["flex", "items-center", "justify-between", "mb-2"]}>
       <AppLink
         class:list={["leading-tight", "lowercase"]}
         url="/"
@@ -29,11 +30,24 @@ try {
       </AppLink>
 
       <ToggleColorScheme class="text-xl" />
-    </div>
-    <h1 class:list={["font-medium", "tracking-tight", "capitalize", "text-4xl", "text-gray-800", "dark:text-gray-300"]}>
+    </nav>
+
+    <!-- Page Title -->
+    <h1
+      class:list={[
+        "font-medium",
+        "tracking-tight",
+        "capitalize",
+        "text-4xl",
+        "sm:text-5xl",
+        "text-gray-800",
+        "dark:text-gray-300",
+      ]}
+    >
       all projects
     </h1>
 
+    <!-- Project Archives -->
     <table class:list={["text-left", "mt-12"]}>
       <thead>
         <tr class:list={["sticky", "top-0", "z-20", "capitalize"]}>
