--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -138,7 +138,7 @@ try {
 
               {/* Link */}
               <td class:list={["align-top", "font-medium", "leading-snug", "py-4", "pr-4", "hidden", "sm:table-cell"]}>
-                <AppLink url={it.link?.url} showSuffixIcon={!!it.link}>
+                <AppLink url={it.link?.url} showSuffixIcon={!!it.link} suffixIconClassName={it.link?.iconClassName}>
                   {it.link?.displayText}
                 </AppLink>
               </td>
