--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Inter from "~assets/fonts/Inter.astro"
 import AppFooter from "~components/AppFooter.astro"
-import IconifyIconsBundleHacks from "~components/IconifyIconsBundleHacks.astro"
+import IconifyIconsBundleHack from "~components/IconifyIconsBundleHack.astro"
 
 const title: string = "Astro Theme Resume Minimalist — Jianqiang Du"
 const description: string = "An open-sourced minimal resume site template built with Astro."
@@ -27,7 +27,7 @@ const description: string = "An open-sourced minimal resume site template built 
       "dark:bg-gray-900",
     ]}
   >
-    <IconifyIconsBundleHacks />
+    <IconifyIconsBundleHack />
 
     <div class="px-6">
       <slot />
