hack: add more icons

--- a/src/components/IconifyIconsBundleHack.astro
+++ b/src/components/IconifyIconsBundleHack.astro
@@ -1,8 +1,14 @@
 ---
 // Hack: Iconify icons referenced through astro endpoints are not bundled, therefore import theme here for bundle processing.
 const iconClassNames: string[] = [
+  "i-ri:wechat-line",
+  "i-ri:mail-line",
+  "i-ri:earth-line",
+  "i-ri:github-line",
   "i-ri:github-fill",
-  //
+  "i-ri:linkedin-box-line",
+  "i-ri:instagram-line",
+  "i-ri:twitter-x-line",
 ].toSorted()
 ---
 
