--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -15,7 +15,7 @@ try {
 ---
 
 <section>
-  <ToggleColorScheme class:list={["fixed", "top-5", "right-6", "z-21", "text-xl"]} />
+  <ToggleColorScheme class:list={["fixed", "top-5", "right-6", "md:top-8", "md:right-12", "z-21", "text-xl"]} />
 
   <header
     class:list={[
@@ -26,6 +26,10 @@ try {
       "py-5",
       "mb-12",
       "-mx-6",
+      "md:px-12",
+      "md:py-8",
+      "md:-mx-12",
+      "md:mb-24",
       "leading-tight",
       "tracking-widest",
       "lowercase",
@@ -64,13 +68,14 @@ try {
       "text-gray-800",
       "dark:text-gray-300",
       "mt-2",
+      "md:mt-4",
     ]}
   >
     Software Developer
   </div>
 
   <!-- Description -->
-  <p class:list={["leading-normal", "mt-8"]}>
+  <p class:list={["leading-normal", "mt-8", "md:mt-16"]}>
     <span>I am the creator of</span>
     <span class="inline-flex">
       <AppLink
