--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -17,9 +17,9 @@ try {
 ---
 
 <BaseLayout>
-  <div class="py-5">
+  <div class:list={["py-5", "md: py-8"]}>
     <!-- Nav -->
-    <nav class:list={["flex", "items-center", "justify-between", "mb-2"]}>
+    <nav class:list={["flex", "items-center", "justify-between", "mb-2", "md:mb-4"]}>
       <AppLink
         class:list={["leading-tight", "lowercase"]}
         url="/"
