adapt responsiveness for breakpoint `lg` for AppFooter

--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -15,7 +15,9 @@ try {
 ---
 
 <section>
-  <ToggleColorScheme class:list={["fixed", "top-5", "right-6", "md:top-8", "md:right-12", "z-21", "text-xl"]} />
+  <ToggleColorScheme
+    class:list={["fixed", "top-5", "right-6", "md:top-8", "md:right-12", "lg:right-24", "z-21", "text-xl"]}
+  />
 
   <header
     class:list={[
@@ -30,6 +32,8 @@ try {
       "md:py-8",
       "md:-mx-12",
       "md:mb-24",
+      "lg:px-24",
+      "lg:-mx-24",
       "leading-tight",
       "tracking-widest",
       "lowercase",
