--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -2,7 +2,19 @@
 import AppLink from "./AppLink.astro"
 ---
 
-<footer class:list={["text-center", "text-xs", "leading-relaxed", "px-6", "pt-24", "pb-12", "md:px-12", "md:pt-48"]}>
+<footer
+  class:list={[
+    "text-center",
+    "text-xs",
+    "leading-relaxed",
+    "px-6",
+    "pt-24",
+    "pb-12",
+    "md:px-12",
+    "md:pt-48",
+    "lg:px-24",
+  ]}
+>
   <p>
     <!-- Author -->
     <div>
