restrict max width

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,6 +25,8 @@ const description: string = "An open-sourced minimal resume site template built 
       "text-gray-500",
       "bg-gray-100",
       "dark:bg-gray-900",
+      "max-w-screen-lg",
+      "mx-auto",
     ]}
   >
     <IconifyIconsBundleHack />
