--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -5,6 +5,7 @@ import ToggleColorScheme from "~components/ToggleColorScheme.astro"
 import { getAllProjects } from "~api/project"
 import type { IProject } from "~types/project"
 import YearRange from "~components/YearRange.astro"
+import Tag from "~components/Tag.astro"
 
 const projects: IProject[] = []
 
@@ -51,6 +52,7 @@ try {
     <table class:list={["text-left", "mt-12", "w-full"]}>
       <thead>
         <tr class:list={["sticky", "top-0", "z-20", "capitalize"]}>
+          <!-- Year -->
           <th
             class:list={[
               "py-4",
@@ -66,6 +68,8 @@ try {
           >
             Year
           </th>
+
+          <!-- Project -->
           <th
             class:list={[
               "py-4",
@@ -81,8 +85,46 @@ try {
           >
             Project
           </th>
-          <!-- <th>Made at</th> -->
-          <!-- <th>Technologies Used</th> -->
+
+          <!-- Made at -->
+          <th
+            class:list={[
+              "py-4",
+              "pr-8",
+              "font-medium",
+              "leading-snug",
+              "text-sm",
+              "text-gray-800",
+              "dark:text-gray-300",
+              "bg-gray-100",
+              "dark:bg-gray-900",
+              "hidden",
+              "lg:table-cell",
+            ]}
+          >
+            Made at
+          </th>
+
+          <!-- Technologies Used -->
+          <th
+            class:list={[
+              "py-4",
+              "pr-8",
+              "font-medium",
+              "leading-snug",
+              "text-sm",
+              "text-gray-800",
+              "dark:text-gray-300",
+              "bg-gray-100",
+              "dark:bg-gray-900",
+              "hidden",
+              "lg:table-cell",
+            ]}
+          >
+            Technologies Used
+          </th>
+
+          <!-- Link -->
           <th
             class:list={[
               "py-4",
@@ -131,10 +173,20 @@ try {
               </td>
 
               {/* Made at */}
-              {/* <td>{it.madeAt}</td> */}
+              <td class:list={["align-top", "font-medium", "leading-snug", "py-4", "pr-4", "hidden", "lg:table-cell"]}>
+                {it.madeAt}
+              </td>
 
               {/* Technologies Used */}
-              {/* <td>{it.technologiesUsed}</td> */}
+              <td class:list={["align-top", "font-medium", "leading-snug", "py-4", "pr-4", "hidden", "lg:table-cell"]}>
+                <ul class:list={["flex", "flex-wrap", "gap-x-1.5", "gap-y-1"]}>
+                  {it.technologiesUsed.map((it) => (
+                    <li>
+                      <Tag text={it} />
+                    </li>
+                  ))}
+                </ul>
+              </td>
 
               {/* Link */}
               <td class:list={["align-top", "font-medium", "leading-snug", "py-4", "pr-4", "hidden", "sm:table-cell"]}>
