--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,7 +31,7 @@ const description: string = "An open-sourced minimal resume site template built 
   >
     <IconifyIconsBundleHack />
 
-    <div class:list={["px-6", "md:px-12", "lg:px-24"]}>
+    <div class:list={["px-6", "md:px-12"]}>
       <slot />
     </div>
 
