--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -15,9 +15,7 @@ try {
 ---
 
 <section>
-  <div
-    class:list={["toggle-color-scheme-wrapper", "fixed", "top-5", "mr-6", "md:top-8", "md:mr-12", "lg:mr-24", "z-21"]}
-  >
+  <div class:list={["toggle-color-scheme-wrapper", "fixed", "top-5", "mr-6", "md:top-8", "md:mr-12", "z-21"]}>
     <ToggleColorScheme class:list={["text-xl"]} />
   </div>
 
@@ -35,8 +33,6 @@ try {
       "md:py-8",
       "md:-mx-12",
       "md:mb-24",
-      "lg:px-24",
-      "lg:-mx-24",
       "leading-tight",
       "tracking-widest",
       "lowercase",
