--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -18,7 +18,7 @@ try {
 ---
 
 <BaseLayout>
-  <div class:list={["py-5", "md: py-8"]}>
+  <div class:list={["py-5", "md:py-8"]}>
     <!-- Nav -->
     <nav class:list={["flex", "items-center", "justify-between", "mb-2", "md:mb-4"]}>
       <AppLink
@@ -94,6 +94,7 @@ try {
               "font-medium",
               "leading-snug",
               "text-sm",
+              "whitespace-nowrap",
               "text-gray-800",
               "dark:text-gray-300",
               "bg-gray-100",
