--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -151,13 +151,14 @@ try {
           projects.map((it) => (
             <tr class:list={["border-b", "last:border-none", "border-gray-800/10", "dark:border-gray-100/10"]}>
               {/* Year */}
-              <td class:list={["align-top", "text-sm", "leading-snug", "capitalize", "py-4", "pr-4"]}>
+              <td class:list={["w-1/12", "align-top", "text-sm", "leading-snug", "capitalize", "py-4", "pr-4"]}>
                 <YearRange startYear={it.startYear} endYear={it.endYear} />
               </td>
 
               {/* Project */}
               <td
                 class:list={[
+                  "w-3/12",
                   "align-top",
                   "font-medium",
                   "leading-snug",
@@ -174,12 +175,34 @@ try {
               </td>
 
               {/* Made at */}
-              <td class:list={["align-top", "font-medium", "leading-snug", "py-4", "pr-4", "hidden", "lg:table-cell"]}>
+              <td
+                class:list={[
+                  "w-2/12",
+                  "align-top",
+                  "font-medium",
+                  "leading-snug",
+                  "py-4",
+                  "pr-4",
+                  "hidden",
+                  "lg:table-cell",
+                ]}
+              >
                 {it.madeAt}
               </td>
 
               {/* Technologies Used */}
-              <td class:list={["align-top", "font-medium", "leading-snug", "py-4", "pr-4", "hidden", "lg:table-cell"]}>
+              <td
+                class:list={[
+                  "w-4/12",
+                  "align-top",
+                  "font-medium",
+                  "leading-snug",
+                  "py-4",
+                  "pr-4",
+                  "hidden",
+                  "lg:table-cell",
+                ]}
+              >
                 <ul class:list={["flex", "flex-wrap", "gap-x-1.5", "gap-y-1"]}>
                   {it.technologiesUsed.map((it) => (
                     <li>
@@ -190,7 +213,18 @@ try {
               </td>
 
               {/* Link */}
-              <td class:list={["align-top", "font-medium", "leading-snug", "py-4", "pr-4", "hidden", "sm:table-cell"]}>
+              <td
+                class:list={[
+                  "w-2/12",
+                  "align-top",
+                  "font-medium",
+                  "leading-snug",
+                  "py-4",
+                  "pr-4",
+                  "hidden",
+                  "sm:table-cell",
+                ]}
+              >
                 <AppLink url={it.link?.url} showSuffixIcon={!!it.link} suffixIconClassName={it.link?.iconClassName}>
                   {it.link?.displayText}
                 </AppLink>
