add location to Profile

--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -77,6 +77,24 @@ try {
     Software Developer
   </div>
 
+  <!-- Location -->
+  <div
+    class:list={[
+      "flex",
+      "items-center",
+      "gap-1",
+      "text-sm",
+      "leading-none",
+      "text-gray-600",
+      "dark:text-gray-400",
+      "mt-2",
+      "md:mt-4",
+    ]}
+  >
+    <i class="i-ri:map-pin-line"></i>
+    <span>Foshan</span>
+  </div>
+
   <!-- Description -->
   <p class:list={["leading-normal", "mt-8", "md:mt-16"]}>
     <span>I am the creator of</span>
