--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -10,12 +10,16 @@ import BuyMeACoffeeDonationQr from "~assets/images/buy-me-a-coffee-donation-qr.w
   <div class:list={["flex", "items-center", "justify-center", "gap-8"]}>
     <!-- Wechat -->
     <Image
-      class:list={["w-auto", "h-25", "lg:h-35"]}
+      class:list={["w-auto", "h-25", "lg:h-35", "dark:brightness-95"]}
       src={WechatDonationQr}
       alt="Scan QR to give a donation through Wechat."
     />
     <!-- Buy me a coffee -->
-    <Image class:list={["w-auto", "h-25", "lg:h-35"]} src={BuyMeACoffeeDonationQr} alt="Scan QR to buy me a coffee." />
+    <Image
+      class:list={["w-auto", "h-25", "lg:h-35", "dark:brightness-95"]}
+      src={BuyMeACoffeeDonationQr}
+      alt="Scan QR to buy me a coffee."
+    />
   </div>
 
   <!-- Site info -->
