--- a/src/pages/index/ProjectDetails.astro
+++ b/src/pages/index/ProjectDetails.astro
@@ -96,7 +96,7 @@ const selectedHighlights: IProjectHighlight[] = highlights.filter((it) => it.val
     {
       !!assetPath && !!images[assetPath] && (
         <Image
-          class:list={["mt-4", "rounded", "border-1", "border-gray-300", "dark:border-gray-600"]}
+          class:list={["mt-4", "rounded", "border-1", "border-gray-300", "dark:border-gray-600", "dark:brightness-95"]}
           src={images[assetPath]()}
           alt={`A preview of ${name} project.`}
         />
