--- a/src/pages/index/Education.astro
+++ b/src/pages/index/Education.astro
@@ -1,6 +1,7 @@
 ---
+import { educations } from "~data/educations"
 import type { IEducation } from "~types/education"
-import { getAllEducations } from "~api/education"
+import { mostRecentYearComparator } from "~utils/comparators"
 import EducationDetails from "./EducationDetails.astro"
 
 interface Props {
@@ -8,14 +9,7 @@ interface Props {
 }
 const { class: className } = Astro.props
 
-const educationDetailsList: IEducation[] = []
-
-try {
-  const educations: IEducation[] = await getAllEducations()
-  educationDetailsList.push(...educations)
-} catch (error) {
-  console.error(error)
-}
+const educationDetailsList: IEducation[] = educations.toSorted(mostRecentYearComparator)
 ---
 
 <section class={className}>
