fix md breakpoint scroll padding

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,6 @@ import Project from "./index/Project.astro"
 
 <style>
   html {
-    --at-apply: scroll-pt-19;
+    --at-apply: scroll-pt-19 "md:scroll-pt-29";
   }
 </style>
