--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from "~layouts/BaseLayout.astro"
-import Profile from "./index/Profile.astro"
-import Education from "./index/Education.astro"
-import Work from "./index/Work.astro"
-import Project from "./index/Project.astro"
+import Profile from "./_index/Profile.astro"
+import Education from "./_index/Education.astro"
+import Work from "./_index/Work.astro"
+import Project from "./_index/Project.astro"
 ---
 
 <BaseLayout>
