update wechat donation qr code display text

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -15,7 +15,7 @@ import BuyMeACoffeeDonationQr from "~assets/images/buy-me-a-coffee-donation-qr.w
         src={WechatDonationQr}
         alt="Scan QR to give a donation through Wechat."
       />
-      <div class:list={["mt-1", "dark:text-gray-400"]}>Wechat</div>
+      <div class:list={["mt-1", "dark:text-gray-400"]}>Wechat Donate</div>
     </div>
 
     <!-- Buy me a coffee -->
