replace image with image viewer

--- a/src/pages/_index/Project.astro
+++ b/src/pages/_index/Project.astro
@@ -4,7 +4,6 @@ import { projects } from "~data/projects"
 import { mostRecentYearComparator } from "~utils/comparators"
 import ProjectDetails from "./ProjectDetails.astro"
 import AppLink from "~components/AppLink.astro"
-import type { TImageModule } from "~types/module"
 
 interface Props {
   class?: string
@@ -12,7 +11,6 @@ interface Props {
 const { class: className } = Astro.props
 
 const projectDetailsList: IProject[] = projects.toSorted(mostRecentYearComparator).slice(0, 10)
-const images: Record<string, () => Promise<TImageModule>> = import.meta.glob<TImageModule>("/src/assets/images/**/*")
 ---
 
 <!-- Projects -->
@@ -46,7 +44,7 @@ const images: Record<string, () => Promise<TImageModule>> = import.meta.glob<TIm
     {
       projectDetailsList.map((it) => (
         <li id={it.id} class:list={["mb-12", "last-of-type:mb-0"]}>
-          <ProjectDetails {...it} images={images} />
+          <ProjectDetails {...it} />
         </li>
       ))
     }
