remove useless import

--- a/src/pages/_index/ProjectDetails.astro
+++ b/src/pages/_index/ProjectDetails.astro
@@ -1,5 +1,5 @@
 ---
-import type { IProject, IProjectAsset, IProjectHighlight } from "~types/project"
+import type { IProject, IProjectHighlight } from "~types/project"
 import type { IGithubRepositoryInfo } from "~types/repository"
 import YearRange from "~components/YearRange.astro"
 import AppLink from "~components/AppLink.astro"
