--- a/src/components/ImageViewer.astro
+++ b/src/components/ImageViewer.astro
@@ -5,8 +5,9 @@ import { nanoid } from "nanoid"
 
 interface Props {
   assets: IProjectAsset[]
+  class?: string | undefined
 }
-const { assets } = Astro.props
+const { assets, class: className } = Astro.props
 
 const imageModules = assets.map(async ({ src }) => {
   try {
@@ -21,20 +22,7 @@ const dialogId: string = nanoid(8)
 
 {
   imageModules[0] && (
-    <image-viewer
-      data-dialog-id={dialogId}
-      class:list={[
-        "flex",
-        "items-center",
-        "justify-center",
-        "mt-4",
-        "ring",
-        "rounded",
-        "overflow-hidden",
-        "ring-gray-300",
-        "dark:ring-gray-600",
-      ]}
-    >
+    <image-viewer data-dialog-id={dialogId} class:list={["flex", "items-center", "justify-center", className]}>
       <Image class:list={["dark:brightness-95"]} src={imageModules[0]} alt={assets[0]?.alt} />
 
       <dialog id={dialogId} popover class:list={["focus-visible:outline-0", "text-gray-800", "dark:text-gray-300"]}>
