--- a/src/pages/_index/ProjectDetails.astro
+++ b/src/pages/_index/ProjectDetails.astro
@@ -90,6 +90,13 @@ const selectedHighlights: IProjectHighlight[] = highlights.filter((it) => it.val
     }
 
     <!-- Preview -->
-    {assets && assets.length > 0 && <ImageViewer assets={assets} />}
+    {
+      assets && assets.length > 0 && (
+        <ImageViewer
+          class:list={["mt-4", "ring", "rounded", "overflow-hidden", "ring-gray-300", "dark:ring-gray-600"]}
+          assets={assets}
+        />
+      )
+    }
   </div>
 </div>
