--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -1,29 +1,25 @@
 ---
 import AppLink from "./AppLink.astro"
-import { Image } from "astro:assets"
-import WechatDonationQr from "~assets/images/wechat-donation-qr.webp"
-import BuyMeACoffeeDonationQr from "~assets/images/buy-me-a-coffee-donation-qr.webp"
+import ImageViewer from "./ImageViewer.astro"
 ---
 
 <footer class:list={["text-center", "text-xs", "leading-relaxed", "px-6", "pt-24", "pb-12", "md:px-12", "md:pt-48"]}>
   <!-- Donations -->
   <div class:list={["flex", "items-center", "justify-center", "gap-8"]}>
     <!-- Wechat -->
-    <div>
-      <Image
-        class:list={["w-auto", "h-25", "lg:h-35", "dark:brightness-95"]}
-        src={WechatDonationQr}
-        alt="Scan QR to give a donation through Wechat."
+    <div class:list={["flex-1", "max-w-25", "lg:max-w-35"]}>
+      <ImageViewer
+        assets={[{ src: "/src/assets/images/wechat-donation-qr.webp", alt: "Scan QR code to donate on Wechat." }]}
       />
       <div class:list={["mt-1", "dark:text-gray-400"]}>Wechat Donate</div>
     </div>
 
     <!-- Buy me a coffee -->
-    <div>
-      <Image
-        class:list={["w-auto", "h-25", "lg:h-35", "dark:brightness-95"]}
-        src={BuyMeACoffeeDonationQr}
-        alt="Scan QR to buy me a coffee."
+    <div class:list={["flex-1", "max-w-25", "lg:max-w-35"]}>
+      <ImageViewer
+        assets={[
+          { src: "/src/assets/images/buy-me-a-coffee-donation-qr.webp", alt: "Scan QR code to buy me a coffee." },
+        ]}
       />
       <div class:list={["mt-1", "dark:text-gray-400"]}>Buy me a coffee</div>
     </div>
