use view transition on toggle color scheme

--- a/src/components/ToggleColorScheme.astro
+++ b/src/components/ToggleColorScheme.astro
@@ -38,7 +38,7 @@ const { class: className } = Astro.props
       } else {
         this.colorScheme = "os"
       }
-      this.setColorScheme()
+      document.startViewTransition(() => this.setColorScheme())
     }
 
     /**
