--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,4 @@
 ---
-import Inter from "~assets/fonts/Inter.astro"
 import IconifyIconDisplayFix from "~components/IconifyIconDisplayFix.astro"
 import AppFooter from "~components/AppFooter.astro"
 
@@ -14,7 +13,7 @@ const description: string = "An open-sourced minimal resume site template built 
   <title>{title}</title>
   <meta name="title" content={title} />
   <meta name="description" content={description} />
-  <Inter />
+  <link rel="stylesheet" href=`${import.meta.env.BASE_URL}/fonts/Inter/inter.css` />
 
   <body
     class:list={[
@@ -44,9 +43,12 @@ const description: string = "An open-sourced minimal resume site template built 
     --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB",
       "Segoe UI", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
       "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: "Inter", var(--font-family);
   }
 
-  html {
-    font-family: var(--font-family);
+  @supports (font-variation-settings: normal) {
+    :root {
+      font-family: "InterVariable", var(--font-family);
+    }
   }
 </style>
