--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,6 +13,10 @@ const description: string = "An open-sourced minimal resume site template built 
   <title>{title}</title>
   <meta name="title" content={title} />
   <meta name="description" content={description} />
+  <link rel="apple-touch-icon" sizes="180x180" href=`${import.meta.env.BASE_URL}/apple-touch-icon.png` />
+  <link rel="icon" type="image/png" sizes="32x32" href=`${import.meta.env.BASE_URL}/favicon-32x32.png` />
+  <link rel="icon" type="image/png" sizes="16x16" href=`${import.meta.env.BASE_URL}/favicon-16x16.png` />
+  <link rel="manifest" href=`${import.meta.env.BASE_URL}/site.webmanifest` />
   <link rel="stylesheet" href=`${import.meta.env.BASE_URL}/fonts/Inter/inter.css` />
 
   <body
