--- a/src/pages/_index/Profile.astro
+++ b/src/pages/_index/Profile.astro
@@ -108,7 +108,7 @@ import ImageViewer from "~components/ImageViewer.astro"
         assets={[{ src: "/src/assets/images/wechat-contact-qr.webp", alt: "Wechat logo." }]}
         showIndex={false}
       >
-        <i class="i-ri:wechat-line"></i>
+        <i class:list={["i-ri:wechat-line", "cursor-pointer"]}></i>
       </ImageViewer>
     </li>
 
