add title to wechat social icon link

--- a/src/pages/_index/Profile.astro
+++ b/src/pages/_index/Profile.astro
@@ -103,7 +103,7 @@ import ImageViewer from "~components/ImageViewer.astro"
 
   <!-- Social Contacts -->
   <ul class:list={["flex", "flex-wrap", "items-center", "gap-5", "text-2xl", "leading-none", "mt-12"]}>
-    <li>
+    <li title="WeChat">
       <ImageViewer
         assets={[{ src: "/src/assets/images/wechat-contact-qr.webp", alt: "Wechat logo." }]}
         showIndex={false}
